--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <title> JavaScript Calculator </title>
+    <link rel="manifest" href="src/manifest.json">
 
     <style>
         h1 {
@@ -56,7 +57,6 @@
 </head>
 
 <body>
-
     <script>
         if ("serviceWorker" in navigator) {
             console.log("Service Worker supported");
@@ -69,7 +69,7 @@
             })
         }
     </script>
-    
+
     <h1> Calculator Program in JavaScript </h1>
     <div class="formstyle">
         <form name="form1">
